--- a/src/scss/global/_boilerplate.scss
+++ b/src/scss/global/_boilerplate.scss
@@ -2,12 +2,12 @@
 *:before,
 *:after {
   box-sizing: border-box;
-}
-
-body {
-  min-height: 100dvh;
   margin: 0;
   padding: 0;
+}
+
+body,html {
+  height: 100%;
   display: grid;
   grid-template-rows: min-content 1fr;
 }
