--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -15,3 +15,11 @@
   --blue-500: hsl(233, 67%, 56%);
   --blue-700: hsl(248, 70%, 36%);
 }
+
+.primary-font-color {
+  color: var(--neutral-0);
+}
+
+.secondary-font-color {
+  color: var(--neutral-200);
+}
