HTML meta tags update
Adding challenge favicon and updating app title, along with testing logic for dropdown menu interaction.

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -12,8 +12,8 @@
     gap: 0.5rem;
   }
 
-  &__option:focus {
-    background-color: purple;
+  &__option:hover {
+    color: purple;
   }
 
   &__menu {
