--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -5,7 +5,7 @@
     background-color: var(--neutral-700);
     display: flex;
     align-items: center;
-    width: fit-content;
+    //width: max-content;
     padding: 0.75rem;
     border-radius: 0.5rem;
     cursor: pointer;
@@ -19,6 +19,7 @@
     position: absolute;
     right: 0;
     top: calc(100% + .25rem);
+    width: max-content;
 
     //  Animation Styles
     transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
