Add options to dropdown menu and update styles
Introduced a DropdownOptions component to display temperature, wind speed, and precipitation unit options within the dropdown menu. Updated SCSS to style the new option sections.

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -38,4 +38,15 @@
   //  Set interaction with the dropdown menu
     pointer-events: auto;
   }
+
+  &__option-select {
+    .temperature, .wind-speed {
+      border-bottom: 1px solid white;
+
+    }
+
+    .temperature, .wind-speed, .precipitation {
+
+    }
+  }
 }
