--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -18,7 +18,7 @@
     padding: 0.75rem;
     position: absolute;
     right: 0;
-    top: calc(100% + .25rem);
+    top: calc(100% + .5rem);
     width: max-content;
 
     //  Animation Styles
@@ -46,7 +46,15 @@
     }
 
     .temperature, .wind-speed, .precipitation {
+      a {
+        display: block;
+      }
 
+      a:hover {
+        color: pink;
+        border-radius: 0.25rem;
+        background: red;
+      }
     }
   }
 }
