Replace dropdown links with radio button controls
Updated the dropdown options for temperature, wind speed, and precipitation to use radio button inputs with labels instead of anchor tags. Added corresponding SCSS styles for the new .form-control class to improve layout and hover effects.

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -45,6 +45,17 @@
 
     }
 
+    .form-control {
+      display:flex;
+      justify-content: space-between;
+    }
+
+    .form-control:hover {
+      cursor: pointer;
+      border-radius: 0.25rem;
+      background: var(--neutral-600);
+    }
+
     .temperature, .wind-speed, .precipitation {
       a {
         display: block;
