Enhance dropdown and search UI with icons and styles
Added custom checkmark icons to dropdown radio options and updated their styles for better visual feedback. Introduced a search icon to the weather dashboard input, improved input and button styling, and adjusted layout for a more polished user interface.

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -46,8 +46,31 @@
     }
 
     .form-control {
-      display:flex;
-      justify-content: space-between;
+      label {
+        display:flex;
+        justify-content: space-between;
+
+        input[type='radio'] {
+          display: none;
+        }
+
+        .checkmark {
+          display: inline-block;
+          width: 20px;
+          height: 20px;
+          background-image:url("/icon-checkmark.svg");
+          background-repeat: no-repeat;
+          background-size: contain;
+        }
+
+        input[type='radio'] + .checkmark{
+          cursor: pointer;
+        }
+
+        input[type='radio']:checked + .checkmark {
+          outline: 2px solid pink;
+        }
+      }
     }
 
     .form-control:hover {
