--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -13,12 +13,14 @@
 
   &__menu {
     background-color: var(--neutral-800);
+    border: 1px solid var(--neutral-600);
     border-radius: 0.5rem;
-    padding: 0.75rem;
+    padding-block: .75rem;
+    padding-inline: .5rem;
     position: absolute;
     right: 0;
     top: calc(100% + .5rem);
-    width: max-content;
+    min-width: 220px;
 
     //  Animation Styles
     transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
@@ -39,7 +41,9 @@
   }
 
   &__option-select {
-
+  .switch-text {
+    margin-block-end: .75rem;
+  }
     .temperature, .wind-speed {
       border-bottom: 1px solid var(--neutral-600);
     }
